# rust-and-c

./: Cargo.toml  build.rs  build.sh
.github/workflows/: rust-clippy.yml
include/: clib.h
src/: bindings.rs  clib.c  main.rs
